Sodexo Peru/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Correo_facturacion__c</fullName>
        <label>Correo facturación</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Correo_facturacion_adicional__c</fullName>
        <label>Correo facturación adicional</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Perfil_Propietario_opcional__c</fullName>
        <formula>Propietario_opcional__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perfil Propietario opcional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario_opcional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Propietario opcional</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recibe_vales__c</fullName>
        <label>Recibe vales</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Físicos</fullName>
                </value>
                <value>
                    <fullName>Virtuales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Comedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDX_Giro_de_negocio_cliente__c</fullName>
        <label>Giro de negocio cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banca y seguros</fullName>
                </value>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Manufactura</fullName>
                </value>
                <value>
                    <fullName>Publicidad</fullName>
                </value>
                <value>
                    <fullName>Transporte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Giro_de_negocio_merchant__c</fullName>
        <label>Giro de negocio merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belleza</fullName>
                </value>
                <value>
                    <fullName>Bodegas</fullName>
                </value>
                <value>
                    <fullName>Farmacias</fullName>
                </value>
                <value>
                    <fullName>Fast Food y Restaurantes</fullName>
                </value>
                <value>
                    <fullName>Moda</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Peluquerías</fullName>
                </value>
                <value>
                    <fullName>Salud</fullName>
                </value>
                <value>
                    <fullName>Supermercado</fullName>
                </value>
                <value>
                    <fullName>Tecnología</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Medios_de_pago__c</fullName>
        <label>Medios de pago</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Niubiz</fullName>
                </value>
                <value>
                    <fullName>Izzipay</fullName>
                </value>
                <value>
                    <fullName>Vale físico</fullName>
                    <isActive>false</isActive>
                    <label>Vale físico</label>
                </value>
                <value>
                    <fullName>Vale virtual</fullName>
                    <isActive>false</isActive>
                    <label>Vale virtual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Mes_cierre_de_presupuesto__c</fullName>
        <label>Mes cierre de presupuesto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enero</fullName>
                </value>
                <value>
                    <fullName>Febrero</fullName>
                </value>
                <value>
                    <fullName>Marzo</fullName>
                </value>
                <value>
                    <fullName>Abril</fullName>
                </value>
                <value>
                    <fullName>Mayo</fullName>
                </value>
                <value>
                    <fullName>Junio</fullName>
                </value>
                <value>
                    <fullName>Julio</fullName>
                </value>
                <value>
                    <fullName>Agosto</fullName>
                </value>
                <value>
                    <fullName>Septiembre</fullName>
                </value>
                <value>
                    <fullName>Octubre</fullName>
                </value>
                <value>
                    <fullName>Noviembre</fullName>
                </value>
                <value>
                    <fullName>Diciembre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Nombre_Comercial__c</fullName>
        <label>Nombre Comercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Nombre_de_competidor__c</fullName>
        <label>Nombre de competidor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cencosud</fullName>
                </value>
                <value>
                    <fullName>Edenred</fullName>
                </value>
                <value>
                    <fullName>La mágica</fullName>
                </value>
                <value>
                    <fullName>SPSA</fullName>
                </value>
                <value>
                    <fullName>Tayloy</fullName>
                </value>
                <value>
                    <fullName>Tebca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Numero_de_documento__c</fullName>
        <label>Número de documento</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Politica_incremento_salarial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Politica incremento salarial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDX_Puntos_de_venta__c</fullName>
        <label>Puntos de venta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Segmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>External Estimulation</fullName>
                </value>
                <value>
                    <fullName>Fuel &amp; Fleet</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Bajas comisiones</fullName>
                    <isActive>false</isActive>
                    <label>Bajas comisiones</label>
                </value>
                <value>
                    <fullName>En desarrollo</fullName>
                    <isActive>false</isActive>
                    <label>En desarrollo</label>
                </value>
                <value>
                    <fullName>Potencial</fullName>
                    <isActive>false</isActive>
                    <label>Potencial</label>
                </value>
                <value>
                    <fullName>Supermercado</fullName>
                    <isActive>false</isActive>
                    <label>Supermercado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Segmento_de_merchant__c</fullName>
        <label>Segmento de merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supermercado</fullName>
                </value>
                <value>
                    <fullName>En desarrollo</fullName>
                </value>
                <value>
                    <fullName>Potencial</fullName>
                </value>
                <value>
                    <fullName>Bajas comisiones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Tipo_Administracion__c</fullName>
        <label>Tipo Administración</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centralizada</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Tipo_de_documento__c</fullName>
        <label>Tipo de documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RUC</fullName>
                    <default>true</default>
                    <label>RUC</label>
                </value>
                <value>
                    <fullName>DNI</fullName>
                </value>
                <value>
                    <fullName>Extranjero</fullName>
                </value>
                <value>
                    <fullName>ID exterior</fullName>
                    <isActive>false</isActive>
                    <label>ID exterior</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Tipo_de_mercado__c</fullName>
        <label>Tipo de mercado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Libre</fullName>
                </value>
                <value>
                    <fullName>Capturado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPI_Segment__c</fullName>
        <formula>IF(
				AND(
								NumberOfEmployees &lt; 50),
				&quot;Small&quot;, IF(
								AND(
								    NumberOfEmployees &gt;= 50,
								    NumberOfEmployees &lt; 200),
								&quot;Medium&quot;, IF(
												AND(
											     NumberOfEmployees &gt;= 200),
												&quot;Large&quot;, IF(
																ISBLANK(NumberOfEmployees),
																&quot;N/A&quot;, NULL)
												)
								)
				)</formula>
        <label>SPI Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_lector__c</fullName>
        <label>Tipo de lector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barras</fullName>
                </value>
                <value>
                    <fullName>QR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las Cuentas</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>